--- a/assets/bbb-connector.less
+++ b/assets/bbb-connector.less
@@ -1,7 +1,7 @@
 ul {
     &.bbb-list {
         li {
-            padding: 0px 5px;
+            padding: 0 5px;
             &:not(:last-child) {
                 &:after {
                     content: ' | ';
@@ -11,7 +11,7 @@ ul {
                 }
             }
             &:last-child {
-                padding-right: 0px;
+                padding-right: 0;
             }
         }
 
